<resources>
    <string name="app_name">COVID-19</string>
    <string name="SituationStr">Latest Situation Reports</string>
    <string name="whoLogoStr">who_logo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="arrow_str">Right swipe arrow</string>
    <string name="right_swipe_sting">Swipe right to continue</string>
    <string name="country_situtation_str">UK\'s Situation in Numbers</string>
    <string name="country_str">\'s Situation in Numbers</string>
    <string name="confirmed_count_str">3,12,213</string>
    <string name="confirmed_cases_str">Confirmed Cases</string>
    <string name="total_deaths_count_str">29,132</string>
    <string name="total_deaths_str">Total Deaths</string>
    <string name="network_not_available">Network not available, default data will be shown.</string>
    <string name="something_went_wrong">Something went wrong, please try again later.</string>
    <string name="old_data_uploaded">You are offline, old data will be shown.</string>
    <string name="network_error">Network error try again later.</string>


</resources>
